Updated main page header

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 	<body >
 		<div class="body container">
 			<div class="header row">
-				<div class="col-md-6">Header</div>
+				<div class="col-md-6">Accenture Case Relationships</div>
 			</div>
 			<div class="main-content row">
-				<div class="col-md-6">Hello</div>
-				<div class="col-md-6">Hello</div>
+				<div class="col-md-6"></div>
+				<div class="col-md-6"></div>
 			</div>
 			<graph-chart href="ajax/miserables.json" class="col-md-12"></graph-chart>
 		</div>
